added AE2, gregtech steam additions and storage drawers

--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -19,3 +19,8 @@ Point Blank
 ULV Covers Modern
 Ex Nihilo: Sequentia
 FTB Quests
+AE2WTLib
+Applied Energistics 2
+ExtendedAE
+MEGA Cells
+Storage Drawers
