--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -91,3 +91,10 @@ exnihilosequentia:transition
 exnihilosequentia:wet_sifting
 ftbquests:loot_crate
 ftbquests:quest
+ae2:attunement
+ae2:certus_growth
+ae2:charger
+ae2:condenser
+ae2:entropy
+ae2:inscriber
+ae2:item_transformation
