--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,7 @@ options.txt
 rhino.local.properties
 usercache.json
 usernamecache.json
+
+.vscode
+kubejs/jsconfig.json
+kubejs/config/probejs.json
