updated code of scrap-blocks with tool-requirements

--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -99,3 +99,6 @@ ae2:entropy
 ae2:inscriber
 ae2:item_transformation
 gtceu:downhole_heat_exchanger
+gtceu:air_scrubber
+gtceu:evaporation
+pointblank:pointblank
