--- a/config/kiwi-client.yaml
+++ b/config/kiwi-client.yaml
@@ -4,9 +4,9 @@ contributorCosmetic: ''
 globalTooltip: false
 noMicrosoftTelemetry: true
 debug:
-  tagsTooltip: false
+  tagsTooltip: true
   debugTooltipMsg: false
   tagsTooltipAppendKeybindHint: true
   tagsPerPage: 6
-  NBTTooltip: false
+  NBTTooltip: true
 suppressExperimentalSettingsWarning: false
