--- a/config/pointblank-common.toml
+++ b/config/pointblank-common.toml
@@ -45,7 +45,17 @@ pipScopeColorBalanceGreen = 105
 pipScopeColorBalanceBlue = 110
 #Enables bullets breaking glass
 bulletsBreakGlassEnabled = true
-#Modifier to adjust damage dealt by hitscan weapons
+#Modifier to adjust damage dealt by hitscan weapons.
 #Range: 0.1 ~ 10.0
 hitscanDamageModifier = 1.0
+#Sets the crosshair type.
+#Allowed Values: DEFAULT, VANILLA, DISABLED
+crosshair = "DEFAULT"
+#Modifier to adjust damage dealt by headshot.
+#Range: 1.0 ~ 10.0
+headshotDamageModifier = 3.0
+#Enables gore effects
+goreEnabled = true
+#Enables advanced integraiton with Iris shaders
+advancedIrisIntegrationEnabled = true
 
