--- a/config/storagedrawers-common.toml
+++ b/config/storagedrawers-common.toml
@@ -12,25 +12,59 @@
 	enableUI = true
 	enableSidedInput = true
 	enableSidedOutput = true
-	enableItemConversion = true
 	enableExtraCompactingRules = true
 	debugTrace = false
 	#List of rules in format "domain:item1, domain:item2, n".
 	#Creates a compacting drawer rule to convert 1 of item1 into n of item2.
 	compactingRules = ["minecraft:clay, minecraft:clay_ball, 4"]
+	#Whether redstone upgrades should emit an analog redstone signal, requiring
+	#the use of a comparator to read it.  This will default to true starting with MC 1.21.
+	enableAnalogRedstone = false
+	#Allows drawers to be pulled from their block and inserted into another block.
+	enableDetachedDrawers = true
+	#Drawers track the capacity upgrades from the block they were taken from.
+	#Drawers can only be placed back into a block with the same or lower max capacity.
+	#Drawers can still only be inserted into a block with enough capacity for the items held.
+	forceDetachedDrawersMaxCapacityCheck = false
+	#If enabled, carrying filled drawers in your inventory gives slowness debuff, unless a Portability Upgrade is used.
+	heavyDrawers = false
+	#If enabled, players can lock drawer interactions to just themselves.
+	enablePersonalKey = true
 
 [StorageUpgrades]
 	#Storage upgrades multiply storage capacity by the given amount.
 	#When multiple storage upgrades are used together, their multipliers are added before being applied.
+	#Storage upgrades start at the level 2 multiplier.  The resistance upgrade uses level 1.
 	level1Mult = 2
 	level2Mult = 4
 	level3Mult = 8
 	level4Mult = 16
 	level5Mult = 32
+	#Storage upgrades increase capacity of drawers.
+	enableStorageUpgrade = true
+	#Fill level upgrades add fill bars to the faces of drawers.
+	enableFillLevelUpgrade = true
+	#Adds redstone output to drawers based on fill levels.
+	enableRedstoneUpgrade = true
+	#Renders drawer labels brighter than the surrounding environment would allow.
+	enableIlluminationUpgrade = true
+	#Causes drawers to accept but void compatible items when they are filled to capacity.
+	enableVoidUpgrade = true
+	#Balance upgrades allow same-item slots to balance out their amounts when items are
+	#added or removed from a lot.  Works across networks when acting through a controller.
+	enableBalanceUpgrade = true
+	#Allows drawers with contents to be freely carried when heavy drawers is enabled.
+	enablePortabilityUpgrade = true
+	#Allows a single drawer to connect to a controller remotely.
+	enableRemoteUpgrade = true
+	#Allows a drawer and all drawers connected to it to connect to a controller remotely.
+	enableRemoteGroupUpgrade = true
 
 [Integration]
 	#When true, shows quantity as NxS + R (by stack size) rather than count
 	wailaStackRemainder = true
 	#When true, does not show current quantities unless quantify key was used
 	wailaRespectQuantifyKey = false
+	#Add CoFH Core specific features if the mod is loaded
+	enableCoFHIntegration = true
 
