updated all mods to their latest version

--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -32,7 +32,6 @@ gtceu:cutter
 gtceu:distillation_tower
 gtceu:distillery
 gtceu:electric_blast_furnace
-gtceu:electric_furnace
 gtceu:electrolyzer
 gtceu:electromagnetic_separator
 gtceu:extractor
@@ -70,13 +69,6 @@ gtceu:steam_turbine
 gtceu:thermal_centrifuge
 gtceu:vacuum_freezer
 gtceu:wiremill
-minecraft:alchemy_bench
-minecraft:botanist_workbench
-minecraft:carpenters_table
-minecraft:glassblower
-minecraft:loom_table
-minecraft:mason_table
-minecraft:tinkering_table
 architects_palette:warping
 ftbquests:loot_crate
 ftbquests:quest
@@ -91,3 +83,18 @@ gtceu:downhole_heat_exchanger
 gtceu:air_scrubber
 gtceu:evaporation
 pointblank:pointblank
+chipped:alchemy_bench
+chipped:botanist_workbench
+chipped:carpenters_table
+chipped:glassblower
+chipped:loom_table
+chipped:mason_table
+chipped:tinkering_table
+gtceu:arc_furnace_recycling
+gtceu:chem_dyes
+gtceu:extractor_recycling
+gtceu:ingot_molding
+gtceu:macerator_recycling
+gtceu:ore_bathing
+gtceu:ore_crushing
+gtceu:ore_forging
