--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -14,7 +14,6 @@ GregTech
 Immersive Weathering
 Architect's Palette
 Chipped
-Chisel Chipped Integration
 Point Blank
 ULV Covers Modern
 FTB Quests
@@ -30,3 +29,4 @@ Natural Decor Mod
 Packed Up
 Abyssal Decor
 XTones Reworked
+Chisel
