updated mods to latest version

--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -98,3 +98,5 @@ gtceu:macerator_recycling
 gtceu:ore_bathing
 gtceu:ore_crushing
 gtceu:ore_forging
+expatternprovider:circuit_cutter
+gtceu:programmed_circuit
