added agricraft, removed some flower seed mods and updated gitignore

--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -1,8 +1,6 @@
 Minecraft
 Biomes O' Plenty
 The One Probe
-Flower Seeds 2
-Flower Seeds 2 Biomes O Plenty Addon
 Block Of Sky
 Pam's HarvestCraft 2 - Crops
 Pam's HarvestCraft 2 - Food Core
@@ -30,3 +28,4 @@ Packed Up
 Abyssal Decor
 XTones Reworked
 Chisel
+AgriCraft
