--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -100,3 +100,7 @@ gtceu:ore_crushing
 gtceu:ore_forging
 expatternprovider:circuit_cutter
 gtceu:programmed_circuit
+agricraft:jei/clipping
+agricraft:jei/mutation
+agricraft:jei/produce
+agricraft:jei/requirement
