added dynamic trees & cybernetics mod, removed recipestages & mobstages

--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -29,3 +29,8 @@ Abyssal Decor
 XTones Reworked
 Chisel
 AgriCraft
+Dynamic Trees
+Patchouli
+Dynamic Trees for Biomes o' Plenty
+Dynamic Trees for PHC2
+Cybernetic System
