removed default IW block_growths & fluid_generators in order to replace them later with custom ones

--- a/config/immersive_weathering-common.toml
+++ b/config/immersive_weathering-common.toml
@@ -17,7 +17,7 @@
 	#Range: 0.0 ~ 1.0
 	immune_chance = 0.4
 	needs_air = true
-	enabled = true
+	enabled = false
 
 [cracked_blocks]
 	cracking_drops_brick = false
