added ex deorum and updated all mods

--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -104,3 +104,14 @@ agricraft:jei/clipping
 agricraft:jei/mutation
 agricraft:jei/produce
 agricraft:jei/requirement
+exdeorum:barrel_compost
+exdeorum:barrel_fluid_mixing
+exdeorum:barrel_mixing
+exdeorum:compressed_hammer
+exdeorum:compressed_sieve
+exdeorum:crook
+exdeorum:crucible_heat_sources
+exdeorum:hammer
+exdeorum:lava_crucible
+exdeorum:sieve
+exdeorum:water_crucible
