bringing the modpack to the latest mod-integration with nuclearcraft, coldsweat etc.

--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -19,12 +19,10 @@ AE2WTLib
 Applied Energistics 2
 ExtendedAE
 MEGA Cells
-Storage Drawers
 KubeJS
 Redden's Stone Lanterns
 Serene Shrubbery
 Natural Decor Mod
-Packed Up
 Abyssal Decor
 XTones Reworked
 Chisel
@@ -36,3 +34,10 @@ Dynamic Trees for PHC2
 Cybernetic System
 Ex Deorum
 Bloom_arti
+Cold Sweat
+Nuclearcraft Neoteric
+Omnidroid
+Sophisticated Backpacks
+Sophisticated Core
+Sophisticated Storage
+Doomsday Decoration
