--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -115,3 +115,37 @@ exdeorum:hammer
 exdeorum:lava_crucible
 exdeorum:sieve
 exdeorum:water_crucible
+nuclearcraft:alloy_smelter
+nuclearcraft:analyzer
+nuclearcraft:assembler
+nuclearcraft:centrifuge
+nuclearcraft:chemical_reactor
+nuclearcraft:crystallizer
+nuclearcraft:decay_hastener
+nuclearcraft:electrolyzer
+nuclearcraft:extractor
+nuclearcraft:fission_boiling
+nuclearcraft:fission_reactor_controller
+nuclearcraft:fluid_enricher
+nuclearcraft:fluid_infuser
+nuclearcraft:fuel_reprocessor
+nuclearcraft:fusion_coolant
+nuclearcraft:fusion_core
+nuclearcraft:gas_scrubber
+nuclearcraft:ingot_former
+nuclearcraft:irradiator
+nuclearcraft:isotope_separator
+nuclearcraft:kugelblitz_chamber
+nuclearcraft:leacher
+nuclearcraft:manufactory
+nuclearcraft:melter
+nuclearcraft:multiblock_structure
+nuclearcraft:nc_ore_veins
+nuclearcraft:nuclear_furnace
+nuclearcraft:pressurizer
+nuclearcraft:pump
+nuclearcraft:rock_crusher
+nuclearcraft:steam_turbine
+nuclearcraft:subatomic_liquifier
+nuclearcraft:supercooler
+nuclearcraft:turbine_controller
