Updating the project to latest changes after hiatus

--- a/config/jei/ingredient-list-type-sort-order.ini
+++ b/config/jei/ingredient-list-type-sort-order.ini
@@ -1,3 +1,4 @@
 net.minecraft.world.item.ItemStack
 net.minecraftforge.fluids.FluidStack
 com.agricraft.agricraft.api.plant.AgriPlant
+snownee.lychee.core.post.PostAction
