--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -149,3 +149,4 @@ nuclearcraft:steam_turbine
 nuclearcraft:subatomic_liquifier
 nuclearcraft:supercooler
 nuclearcraft:turbine_controller
+gtceu:xeric_terraformer
