--- a/config/dynamictrees-common.toml
+++ b/config/dynamictrees-common.toml
@@ -11,7 +11,7 @@
 #Miscellaneous Settings
 [misc]
 	#If enabled, dirt bucket recipes will be automatically generated.
-	generateDirtBucketRecipes = true
+	generateDirtBucketRecipes = false
 	#The base potion the Biochar Base is brewed from. Minecraft potions use 'awkward'. If you change this, don't forget to update the patchouli manual page too.
 	biocharBrewingBase = "thick"
 
@@ -20,9 +20,9 @@
 	#The mod ID of preferred season mod. If a season provider for this mod ID is present, it will be used for integration with seasons. Set this to "!" to disable integration or "*" to accept the any integration (the first available).
 	preferredSeasonMod = "*"
 	#If enabled, seed drop rates will be multiplied based on the current season (requires serene seasons).
-	enableSeasonalSeedDropFactor = true
+	enableSeasonalSeedDropFactor = false
 	#If enabled, growth rates will be multiplied based on the current season (requires serene seasons).
-	enableSeasonalGrowthFactor = true
+	enableSeasonalGrowthFactor = false
 	#If enabled, fruit production rates will be multiplied based on the current season (requires serene seasons).
-	enableSeasonalFruitProductionFactor = true
+	enableSeasonalFruitProductionFactor = false
 
