filtered NC-recipes and implemented basis for gtceu-nc recipes

--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -104,37 +104,38 @@ agricraft:jei/clipping
 agricraft:jei/mutation
 agricraft:jei/produce
 agricraft:jei/requirement
-nuclearcraft:alloy_smelter
+nuclearcraft:nuclear_furnace
+gtceu:xeric_terraformer
 nuclearcraft:analyzer
+nuclearcraft:decay_hastener
+nuclearcraft:electrolyzer
+nuclearcraft:extractor
+nuclearcraft:fuel_reprocessor
+nuclearcraft:gas_scrubber
+nuclearcraft:irradiator
+nuclearcraft:nc_ore_veins
+nuclearcraft:pump
+nuclearcraft:rock_crusher
+nuclearcraft:steam_turbine
+nuclearcraft:supercooler
+nuclearcraft:alloy_smelter
 nuclearcraft:assembler
 nuclearcraft:centrifuge
 nuclearcraft:chemical_reactor
 nuclearcraft:crystallizer
-nuclearcraft:decay_hastener
-nuclearcraft:electrolyzer
 nuclearcraft:fission_boiling
 nuclearcraft:fission_reactor_controller
 nuclearcraft:fluid_enricher
 nuclearcraft:fluid_infuser
-nuclearcraft:fuel_reprocessor
 nuclearcraft:fusion_coolant
 nuclearcraft:fusion_core
-nuclearcraft:gas_scrubber
 nuclearcraft:ingot_former
-nuclearcraft:irradiator
 nuclearcraft:isotope_separator
 nuclearcraft:kugelblitz_chamber
 nuclearcraft:leacher
 nuclearcraft:manufactory
 nuclearcraft:melter
 nuclearcraft:multiblock_structure
-nuclearcraft:nc_ore_veins
-nuclearcraft:nuclear_furnace
 nuclearcraft:pressurizer
-nuclearcraft:pump
-nuclearcraft:rock_crusher
-nuclearcraft:steam_turbine
 nuclearcraft:subatomic_liquifier
-nuclearcraft:supercooler
 nuclearcraft:turbine_controller
-gtceu:xeric_terraformer
